Documented Properties in OpenAPI specification
Created an OpenAPI specification for Properties routes. Renamed
propertyList to propertySearch and created a propertyList for a list of
properties.
