# routes/properties.js
@@ -11,14 +11,14 @@ import {defineAbilitiesFor} from '../permissions/users.js';
 import {
   validatePropertyCreate,
   validatePropertyUpdate,
-  validatePropertyList,
+  validatePropertySearch,
 } from '../middlewares/validation.js';
 import Property from '../models/property.js';
 import {propertySearchQuery} from '../helpers/query-builder.js';
 
 const router = new Router({prefix: '/properties'});
 
-router.get('/', guestOrAuth, validatePropertyList, getProperties);
+router.get('/', guestOrAuth, validatePropertySearch, getProperties);
 router.post('/', auth, validatePropertyCreate, createProperty);
 router.get('/:id', guestOrAuth, getProperty);
 router.put('/:id', auth, validatePropertyUpdate, updateProperty);
